--- a/style/employer.css
+++ b/style/employer.css
@@ -155,7 +155,7 @@ span {
     width: 350px;
     display: none;
     cursor: pointer;
-    z-index: -1;
+    z-index: 10000;
 
 }
 
@@ -178,9 +178,9 @@ span {
     position: absolute;
     width: 330px;
     box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
-    left: -20px;
-    margin-top: 15px;
     display: none;
+    z-index: 10000;
+    background-color: #fff;
 }
 
 #drp_dwn_prod>li {
@@ -191,4 +191,214 @@ span {
 
 #drp_dwn_prod>li:hover {
     background-color: #95959557;
+}
+
+/* styling first section of body content */
+
+._sec {
+    width: 70%;
+    display: flex;
+    margin-top: 3%;
+    margin: auto;
+    padding-top: 3%;
+}
+
+#_f_s_left {
+    width: 60%;
+    margin: auto;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+    margin-top: -15px;
+}
+
+
+
+.image_box {
+    width: 40%;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.image_box>img {
+    width: 100%;
+    height: 40vh;
+}
+
+#_f_s_right {
+    width: 40%;
+    border: 0.8px solid #a7a7a793;
+}
+
+#rght_top {
+    display: flex;
+    gap: 40px;
+    height: 70px;
+    border: 1px solid #a7a7a793;
+    justify-content: first baseline;
+    padding-left: 20px;
+}
+
+#rght_top>p {
+    height: 100%;
+    padding-top: 10%;
+    cursor: pointer;
+
+}
+
+#rght_top>p:first-child {
+    border-bottom: 2px solid #ed055a;
+}
+
+#rght_top+p {
+    margin-top: 5px;
+    padding-left: 20px;
+    margin-bottom: 10px;
+}
+
+#radio_btns {
+    padding-left: 20px;
+    width: 90%;
+    display: flex;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+
+#radio_btns>label {
+    font-size: 14px;
+    font-family: Roboto, Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    line-height: 16px;
+    color: #7c8ba2;
+    text-align: center;
+    display: flex;
+}
+
+#radio_btns>label>input[type="radio"] {
+    width: 1.45em;
+    height: 1.45em;
+}
+
+.__top_head {
+    line-height: 17px;
+    font-size: 14px;
+    color: #2870c1;
+    font-weight: 800;
+    padding-bottom: 10px;
+}
+
+.__mid_head {
+    line-height: 40px;
+    font-size: 28px;
+    color: #414b5d;
+    font-weight: 600;
+}
+
+.__btm_head {
+    font-size: 22px;
+    color: #8892a3;
+    font-weight: 400;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.under_line {
+    width: 90%;
+    height: 0.4px;
+    background-color: #b3b3b372;
+    margin: 5px 0px;
+}
+
+._spans {
+    margin-top: 5px;
+    color: #8892a3;
+    font-weight: 400;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+}
+
+._spans>span {
+    padding: 2px 0px 2px 8px;
+}
+
+._spans>span+span {
+    border-left: 0.5px solid #9ba3b0cb;
+
+}
+
+.knw_mre {
+    margin-top: 3%;
+    Color: #2870c1;
+    font-size: 14px;
+    padding: 8px 11px;
+    font-weight: 700;
+    border: 1px solid #2870c1;
+    cursor: pointer;
+    border-radius: 4px;
+    background-color: transparent;
+}
+
+.knw_mre:hover {
+    background-color: #6da6e830;
+}
+
+#inputfield {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+#inputfield>input {
+    display: block;
+    margin: auto;
+    width: 80%;
+    height: 30px;
+    padding-left: 3px;
+    font-size: 14px;
+    font-weight: 400;
+    color: #191b1f;
+    text-transform: capitalize;
+    border: none;
+    outline: none;
+    border-bottom: 0.3px solid #9ba3b0cb;
+}
+
+#captcha {
+    width: 80%;
+    border: 1px solid #9ba3b0cb;
+    margin: auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+#captcha>label {
+    text-align: center;
+    display: flex;
+    gap: 10px;
+}
+
+#captcha>label>input[type="checkbox"] {
+    width: 1.65em;
+    height: 1.65em;
+}
+
+#clback {
+    display: block;
+    margin: auto;
+    margin-top: 10px;
+    width: 80%;
+    padding: 7px 0px;
+    text-transform: uppercase;
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 700;
+    color: #fff;
+    background-color: #052df4;
+    cursor: pointer;
+    border: none;
+    border-radius: 5px;
+    margin-bottom: 20px;
 }
