--- a/style/employer.css
+++ b/style/employer.css
@@ -344,13 +344,15 @@ span {
     background-color: #6da6e830;
 }
 
-#inputfield {
+#inputfield,
+.inputs {
     display: flex;
     flex-direction: column;
     gap: 30px;
 }
 
-#inputfield>input {
+#inputfield>input,
+.inputs>input {
     display: block;
     margin: auto;
     width: 80%;
@@ -365,7 +367,8 @@ span {
     border-bottom: 0.3px solid #9ba3b0cb;
 }
 
-#captcha {
+#captcha_sec,
+#captcha_sec2 {
     width: 80%;
     border: 1px solid #9ba3b0cb;
     margin: auto;
@@ -374,18 +377,21 @@ span {
     align-items: center;
 }
 
-#captcha>label {
+#captcha_sec>label,
+#captcha_sec2>label {
     text-align: center;
     display: flex;
     gap: 10px;
 }
 
-#captcha>label>input[type="checkbox"] {
+#captcha_sec>label>input[type="checkbox"],
+#captcha_sec2>label>input[type="checkbox"] {
     width: 1.65em;
     height: 1.65em;
 }
 
-#clback {
+#clback,
+#clback2 {
     display: block;
     margin: auto;
     margin-top: 10px;
@@ -401,4 +407,161 @@ span {
     border: none;
     border-radius: 5px;
     margin-bottom: 20px;
+}
+
+
+/* Three card section */
+
+#card_section {
+    width: 70%;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 4%;
+    margin-bottom: 20px;
+}
+
+.card {
+    width: 30%;
+    border: 0.5px solid #9aa5b660;
+    padding: 15px;
+    border-radius: 4px;
+    cursor: pointer;
+
+}
+
+.card:hover {
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    border: none;
+}
+
+.card_hd {
+    margin-bottom: 10px;
+    width: 40%;
+    line-height: 28px;
+    font-size: 20px;
+    font-weight: 600;
+    color: #191b1f;
+}
+
+.card:first-child>.card_hd {
+    width: 80%;
+}
+
+.card_desc {
+    margin: 10px 0px;
+    line-height: 24px;
+    color: #232832;
+}
+
+/* 2870c1 */
+.card_btn {
+    margin-top: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 600;
+    color: #2870c1;
+    gap: 3px;
+    text-transform: capitalize;
+}
+
+.card_btn>img {
+    width: 20px;
+}
+
+.card:nth-child(2) .card_btn,
+.card:nth-child(3) .card_btn {
+    margin-top: 18%;
+}
+
+/* sections  */
+.secend,
+.third,
+.succ_story,
+.appDwnld {
+    width: 70%;
+    margin: auto;
+}
+
+.secend>img,
+.third>img,
+.appDwnld>img,
+.succ_story>img {
+    width: 100%;
+
+}
+
+/* companies logo section */
+.comp_logo {
+    width: 100%;
+    background-color: #f6fbff;
+    height: 30vh;
+    margin-top: 10px;
+}
+
+#logo_cont {
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin: auto;
+    height: 100%;
+}
+
+#logo_cont>div {
+    width: 11%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#logo_cont>div>img {
+    width: 80%;
+}
+
+/* Foote section of the page  */
+footer {
+    background-color: #01204f;
+    width: 100%;
+    height: 750px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#foot_container {
+    width: 70%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: auto;
+}
+
+#foot_first {
+    width: 50%;
+}
+
+#foot_first>img {
+    width: 100%;
+}
+
+#foot_secend {
+    background-color: #fff;
+}
+
+#copy_right {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 10px;
+    color: #fff;
 }
