--- a/Job/browse-jobs.css
+++ b/Job/browse-jobs.css
@@ -121,6 +121,7 @@
       }
       #a1 {
         margin-left: 860px;
+       color:  #77c8e3;
       }
       .a2:hover {
         color: rgb(4, 4, 165);
