complete all my task

--- a/style/navbar.css
+++ b/style/navbar.css
@@ -91,7 +91,7 @@ nav {
 }
 
 ._menu_list>li:hover {
-    background-color: #e2e2e2cc;
+    background-color: #e2e2e2;
 }
 
 ._menu_list>li:hover>a {
